<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/heading_general" android:key="general">
		<ListPreference android:title="@string/prompt_layout" android:defaultValue="@string/default_layout" android:entryValues="@array/layouts" android:key="layout" android:entries="@array/layouts" android:enabled="true" android:selectable="true" android:summary="@string/summary_layout"/><ListPreference android:entries="@array/color_schemes"
			android:selectable="true"
			android:enabled="true"
			android:key="colorScheme" android:title="@string/prompt_color_scheme" android:entryValues="@array/color_schemes" android:defaultValue="@string/default_color_scheme" android:summary="@string/summary_color_scheme"/>
		<ListPreference android:selectable="true" android:defaultValue="English" android:enabled="true" android:entryValues="@array/key_labels" android:key="labelType" android:title="@string/prompt_label_type" android:entries="@array/key_labels" android:summary="@string/summary_label_type"/>
		<EditTextPreference android:title="@string/prompt_scale" android:key="scale" android:enabled="true" android:selectable="true" android:summary="@string/summary_scale"/>
		<EditTextPreference android:title="@string/prompt_touch_scale" android:key="touchScale" android:enabled="true" android:selectable="true" android:summary="@string/summary_touch_scale"/>
		<ListPreference android:key="instrument" android:title="@string/prompt_instrument" android:defaultValue="@string/default_instrument" android:entryValues="@array/instruments" android:entries="@array/instruments" android:enabled="true" android:selectable="true" android:summary="@string/summary_instrument"/>
		<PreferenceScreen android:title="Modifier Keys">
		    <CheckBoxPreference android:key="hideModifierKeys" android:defaultValue="false" android:title="@string/prompt_hide_modifiers" android:summary="@string/summary_hide_modifiers"/>
		    <CheckBoxPreference android:key="sustainHold" android:defaultValue="true" android:title="@string/prompt_hold_sustain" android:summary="@string/summary_hold_sustain"/>
		    <CheckBoxPreference android:key="sustainAlwaysOn" android:defaultValue="false" android:title="@string/prompt_sustain_always_on" android:summary="@string/summary_sustain_always_on"/>
		</PreferenceScreen>
		<PreferenceScreen android:title="MIDI Support">
			<PreferenceCategory android:key="midi-out" android:title="MIDI OUT">
				<Preference android:key="midi-out-usb-midi-host" android:enabled="false" android:title="USB-MIDI host-mode" android:summary="Possible - Free/Open-source MIDI library now available (18812)." />
				<Preference android:key="midi-out-usb-midi-device" android:enabled="false" android:title="USB-MIDI device-mode" android:summary="Not yet possible - needs Google to support USB device-mode in Android's APIs (30198, 10176, 18812)." />
				<Preference android:key="midi-out-ipmidi" android:enabled="false" android:title="ipMIDI" android:summary="Not yet supported - needs a MIDI API or Free/Open-source MIDI library (18812)." />
				<Preference android:key="midi-out-rtp-midi" android:enabled="false" android:title="RTP-MIDI" android:summary="Not yet supported - needs a MIDI API or Free/Open-source MIDI library (18812)." />
				<Preference android:key="midi-out-sonivox" android:enabled="false" android:title="Internal MIDI synthesiser" android:summary="Not yet possible - needs Google to care about music apps. (8201)" />
			</PreferenceCategory>
			<PreferenceCategory android:key="midi-in" android:title="MIDI IN">
				<Preference android:key="midi-in-usb-midi-host" android:enabled="false" android:title="USB-MIDI host-mode" android:summary="Possible - Free/Open-source MIDI library now available (18812)." />
				<Preference android:key="midi-in-usb-midi-device" android:enabled="false" android:title="USB-MIDI device-mode" android:summary="Not yet possible - needs Google to support USB device-mode in Android's APIs (30198, 10176, 18812)." />
				<Preference android:key="midi-in-ipmidi" android:enabled="false" android:title="ipMIDI" android:summary="Not yet supported - needs a MIDI API or Free/Open-source MIDI library (18812)." />
				<Preference android:key="midi-in-rtp-midi" android:enabled="false" android:title="RTP-MIDI" android:summary="Not yet supported - needs a MIDI API or Free/Open-source MIDI library (18812)." />
			</PreferenceCategory>
			<PreferenceCategory android:key="issues" android:title="Issues">
				<Preference android:key="issues-star" android:selectable="false" android:summary="Please go and 'star' the Android issues if you want Google to notice. If you can help out with development, please get in touch." />
				<Preference android:key="issue-45" android:title="Isokeys 45" android:summary="https://sourceforge.net/p/isokeys/tickets/45/" />
				<Preference android:key="issue-18812" android:title="Android 18812" android:summary="https://code.google.com/p/android/issues/detail?id=18812" />
				<Preference android:key="issue-30198" android:title="Android 30198" android:summary="https://code.google.com/p/android/issues/detail?id=30198" />
				<Preference android:key="issue-10176" android:title="Android 10176" android:summary="https://code.google.com/p/android/issues/detail?id=10176" />
				<Preference android:key="issue-8201" android:title="Android 8201" android:summary="https://code.google.com/p/android/issues/detail?id=8201" />
			</PreferenceCategory>
		</PreferenceScreen>
		<!--  <Preference android:title="Donate" android:summary="(via PayPal)" android:key="donate" /> -->
	</PreferenceCategory>

	<PreferenceCategory android:key="jammer" android:title="@string/heading_jammer">
		<ListPreference android:title="@string/prompt_highest_note" android:entryValues="@array/base_notes" android:key="baseJammerNote" android:defaultValue="@string/default_jammer_note" android:entries="@array/base_notes" android:summary="@string/summary_highest_note"/>
		<ListPreference android:entryValues="@array/base_octaves" android:key="baseJammerOctave" android:title="@string/prompt_highest_note_octave" android:defaultValue="@string/default_jammer_octave" android:entries="@array/base_octaves" android:summary="@string/summary_highest_note_octave"/>
		<CheckBoxPreference android:key="jammerLandscape" android:defaultValue="false" android:title="@string/prompt_landscape_labels" android:summary="@string/summary_landscape"/>
		<ListPreference android:defaultValue="@string/default_jammer_key_orientation" android:entryValues="@array/key_orientations" android:summary="@string/summary_key_orientation" android:key="jammerKeyOrientation" android:entries="@array/key_orientations" android:title="@string/prompt_key_orientation"/>
		<CheckBoxPreference android:key="jammerKeyOverlap" android:defaultValue="false" android:title="@string/prompt_single_touch_chording" android:summary="@string/summary_single_touch_chording"/>
	</PreferenceCategory>
	<PreferenceCategory android:key="janko" android:title="@string/heading_janko">
		<ListPreference android:defaultValue="@string/default_janko_note" android:entries="@array/base_notes" android:entryValues="@array/base_notes" android:title="@string/prompt_highest_note" android:key="baseJankoNote" android:summary="@string/summary_highest_note"/>
		<ListPreference android:defaultValue="@string/default_janko_octave" android:entries="@array/base_octaves" android:entryValues="@array/base_octaves" android:title="@string/prompt_highest_note_octave" android:key="baseJankoOctave" android:summary="@string/summary_highest_note_octave"/>
		<CheckBoxPreference android:key="jankoLandscape" android:title="@string/prompt_landscape_labels" android:summary="@string/summary_landscape" android:defaultValue="true"/>
		<ListPreference android:defaultValue="@string/default_janko_key_orientation" android:title="@string/prompt_key_orientation" android:key="jankoKeyOrientation" android:summary="@string/summary_key_orientation" android:entries="@array/key_orientations" android:entryValues="@array/key_orientations"/>
		<ListPreference android:key="jankoRowCount" android:defaultValue="@string/default_janko_row_count" android:entries="@array/janko_row_counts" android:entryValues="@array/janko_row_counts" android:title="@string/prompt_janko_row_count" android:summary="@string/summary_janko_row_count"/>
	</PreferenceCategory><PreferenceCategory android:key="sonome" android:title="@string/heading_sonome">
		<ListPreference android:title="@string/prompt_lowest_note" android:entryValues="@array/base_notes" android:key="baseSonomeNote" android:defaultValue="@string/default_sonome_note" android:entries="@array/base_notes" android:summary="@string/summary_lowest_note" />
		<ListPreference android:entryValues="@array/base_octaves" android:key="baseSonomeOctave" android:title="@string/prompt_lowest_note_octave" android:defaultValue="@string/default_sonome_octave" android:entries="@array/base_octaves" android:summary="@string/summary_lowest_note_octave" />
		<CheckBoxPreference android:key="sonomeLandscape" android:defaultValue="true" android:title="@string/prompt_landscape_labels" android:summary="@string/summary_landscape" />
		<ListPreference android:defaultValue="@string/default_sonome_key_orientation" android:entryValues="@array/key_orientations" android:summary="@string/summary_key_orientation" android:key="sonomeKeyOrientation" android:entries="@array/key_orientations" android:title="@string/prompt_key_orientation" />
	</PreferenceCategory>
	<PreferenceScreen android:title="Advanced">
		<EditTextPreference android:title="@string/prompt_polyphony_count" android:key="polyphonyCount" android:defaultValue="@integer/default_polyphony_count" android:numeric="integer" android:maxLength="2" android:enabled="true" android:selectable="true" android:summary="@string/summary_polyphony_count"/>
	</PreferenceScreen>
</PreferenceScreen>
